fix(opponent): overflow for party type opponents (#4386)
fix(opponent): missing overflow for party type opponents

--- a/stylesheets/commons/Brackets.less
+++ b/stylesheets/commons/Brackets.less
@@ -1122,7 +1122,7 @@ img.brkts-champion-icon,
 	width: 100%;
 }
 
-.player-has-team {
+.block-players-wrapper {
 	width: 100%;
 }
 
